Changing lead item

--- a/2025/2025-02-02.md
+++ b/2025/2025-02-02.md
@@ -1,37 +1,55 @@
-# Tether is now almost as profitable as Goldman Sachs 
-## Can we stop predicting its supposedly imminent disappearance now?
+# Tether is now almost as profitable as Goldman Sachs.
+## Can we stop predicting the stablecoin issuer's supposedly imminent collapse yet?
 
-![An actual bottle of snake oil on a store shelf, along with other elixirs](https://w3w.news/img/snake-oil-1920.jpg)
+![A physical Tether token wedged under a laptop](https://images.unsplash.com/photo-1626163015484-81fc7e3b90d8)
 
-*Cropped photo by Wesley Fryer via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by/2.0/)*
+*Photo by DrawKit Illustrations via Unsplash*
 
-**A quick self-assessment test** for everyone in the U.S. tech industry:
+**You will never hear me deny that crypto bulls** sometimes make cartoonishly triumphant claims and predictions. These are easy to spot (and mock) whenever bitcoin [doesn't zoom to $1 million per token](https://cointelegraph.com/news/former-coinbase-cto-makes-2m-bet-on-bitcoin-s-performance) within a 90-day timeframe, for example.
 
-- Are you three feet tall?
-- Is your skin green?
-- Are your ears pointy?
-
-If you answered "no" to all three of these questions, I'm sorry to report that you are not Yoda. This means you cannot in fact see the future.
-
-This outcome should not be surprising, of course, as Yoda is fictional. But even if he did
-
-((Zuckerberg example))
-
-Build one and show it to me. Or else STFU with your predictions, Mark.
-
-Zeke Fawkes and Batman actors books dedicated long passages to predicting Tether's doom. 
-
-Lehman Brothers and Bear Stearns. 
+That said, some bears' crypto doomsaying strikes me as equally outlandish at this point. But bears tend to get away with their whoppers more readily because, frankly, the mainstream press is more sympathetic to them.
 
 
 
-<!-- 100-word lede item.
 
-At some point, critics' assertions that crypto is all going to vanish have to be considered as delusional as anything the bulls make. 
+<!--
 
-https://decrypt.co/303970/openai-o3-mini-early-launch-first-tests-deepseek
+Start with the gross overgeneralization that crypto is *all* a fraud, not a marketplace that sometimes has individual bad actors who are exceptions to the norm, as happens in stocks or real estate or any other asset.
 
-https://decrypt.co/303904/italy-bans-china-deepseek-ai-privacy-fears
+Truly, wherever you find people and money, you will find people trying to screw other people out of money. Unfortunately, this is a feature of human beings, not something unique to crypto or any other investment.
+
+Overestimating the preventive power of agency regulation and underestimating the importance of market-based validation.
+
+Some other string...
+
+- NYT prediction in '22: https://www.nytimes.com/2022/06/17/technology/tether-stablecoin-cryptocurrency.html
+
+- https://www.cnbc.com/2023/01/13/a-stablecoin-collapse-could-spill-into-us-bond-market-academic.html
+
+- https://crypto.news/tether-discloses-timeframe-for-suspending-usdt-redemptions-on-multiple-networks/
+
+- https://gizmodo.com/tether-terra-luna-bitcoin-fall-global-crypto-regulator-1848916607
+
+- https://gizmodo.com/tether-terra-luna-bitcoin-fall-global-crypto-regulator-1848916607
+
+- https://www.marketwatch.com/story/crypto-crash-what-investors-need-to-know-about-luna-tether-and-bitcoin-11652386874
+
+
+At some point, critics' assertions that crypto is all going to vanish have to be considered as delusional as anything the bulls make.
+
+Zeke Fawkes and Batman actors books dedicated long passages to predicting Tether's doom.
+
+Lehman Brothers and Bear Stearns.
+
+-->
+
+
+
+
+
+
+
+<!--
 
 My initial impression of the DeepSeek news is that it underscores two important points.
 
@@ -41,27 +59,14 @@ My initial impression of the DeepSeek news is that it underscores two important 
 
 3) It underscores the problem of oligarchy: It's less innovative.
 
-- A rough timeline of the DeepSeek news: https://sherwood.news/markets/quick-and-dirty-timeline-of-markets-deepseek-freak/
+https://decrypt.co/303970/openai-o3-mini-early-launch-first-tests-deepseek
 
-- Will bubble burst in 2025? https://www.forbes.com/sites/kolawolesamueladebayo/2025/01/20/experts-predict-the-bubble-may-burst-for-ai-in-2025/
+https://decrypt.co/303904/italy-bans-china-deepseek-ai-privacy-fears
 
-- Crib from earlier linkedin post about AI governance/oligopoly, if it's relevant.
+
+- Will the AI bubble burst in 2025? https://www.forbes.com/sites/kolawolesamueladebayo/2025/01/20/experts-predict-the-bubble-may-burst-for-ai-in-2025/
 
 -->
-
-### Week in Review: Jan. 26 to Feb. 2, 2025
-
-<!--
-
-- China's DeepSeek: https://www.cnbc.com/2025/01/24/how-chinas-new-ai-model-deepseek-is-threatening-us-dominance.html
-
-- Einhorn investor note lamenting bull cycle: https://www.cnbc.com/2025/01/21/david-einhorn-says-we-have-reached-the-fartcoin-stage-of-the-market-cycle.html
-
-
-- proposal to reduce Solana legislation: https://www.dlnews.com/articles/defi/solana-heavyweights-push-to-cut-inflation/
-
-
-
 <!-- People's bid for TikTok: https://www.projectliberty.io/peoples-bid-for-tiktok/ | Sheila Warren hired as CEO
 
 - Cops misusing facial recognition https://www.washingtonpost.com/business/interactive/2025/police-artificial-intelligence-facial-recognition/
@@ -70,14 +75,25 @@ My initial impression of the DeepSeek news is that it underscores two important 
 
 -->
 
-- DeepSeek: TK
+### Week in Review: Jan. 26 to Feb. 2, 2025
+
+
+
+
+- Deepseek update TKTKTK A rough timeline of the DeepSeek news: https://sherwood.news/markets/quick-and-dirty-timeline-of-markets-deepseek-freak/ China's DeepSeek: https://www.cnbc.com/2025/01/24/how-chinas-new-ai-model-deepseek-is-threatening-us-dominance.html
+
+- Einhorn investor note lamenting bull cycle: https://www.cnbc.com/2025/01/21/david-einhorn-says-we-have-reached-the-fartcoin-stage-of-the-market-cycle.html
+
+
+- proposal to reduce Solana legislation: https://www.dlnews.com/articles/defi/solana-heavyweights-push-to-cut-inflation/
+
 
 - **Crypto prices were held in check** by a mixed outlook for U.S. inflation and [interest rates](https://www.coindesk.com/markets/2025/01/28/fed-holds-rates-steady-takes-note-of-elevated-inflation). Perhaps most concerning, the Trump administration began [implementing tariffs](https://www.wsj.com/politics/elections/trump-says-tariffs-are-coming-on-computer-chips-steel-and-more-cef9974c?st=Q7Uc7p&reflink=desktopwebshare_permalink) against three of America's largest international trading partners, with additional industry-specific levies promised to come. An escalating trade war could put upward pressure on U.S. consumer prices in the months ahead as importers pass along the cost of tariffs. That in turn would effectively discourage interest-rate cuts friendly to traders of crypto, stocks, and other assets.
 
 - **As of Saturday afternoon in New York,** the global token market's valuation stood at $3.5 trillion, down more than 3% for the week. Bitcoin and ether each suffered similar 7-day declines in percentage terms. Meanwhile, Solana was a notable market laggard, off 13% for the week, according to [CoinMarketCap](https://coinmarketcap.com/).
 
 - Tether annual report: https://www.theblock.co/post/338275/tether-reports-13-billion-in-yearly-net-profits-for-2024 |  Stablecoin valuation tops 200B: https://www.coindesk.com/markets/2025/01/31/stablecoin-market-surges-past-usd200b-signaling-potential-crypto-price-upswing | https://decrypt.co/303882/tether-record-shattering-profits-bitcoin-us
- 
+
 - MSTR preferred offering coming: https://www.coindesk.com/markets/2025/01/29/institutions-are-primed-for-microstrategy-s-preferred-stock-sale-data-suggests | https://www.theblock.co/post/338259/microstrategy-sees-strong-demand-for-preferred-stock-plan-raises-563-4-million-to-fuel-more-bitcoin-purchases
 
 - Grayscale is introducing a Dogecoin trust. https://decrypt.co/303843/bitcoin-and-ethereum-etf-issuer-grayscale-debuts-a-new-dogecoin-trust | They also want to do a Ripple ETF: https://www.coindesk.com/markets/2025/01/31/grayscale-files-sec-proposal-to-convert-xrp-trust-into-etf
