updating draft for 2 Feb

--- a/2025/2025-02-02.md
+++ b/2025/2025-02-02.md
@@ -1,98 +1,59 @@
-# Tether is now almost as profitable as Goldman Sachs.
-## Can we stop predicting the stablecoin issuer's supposedly imminent collapse yet?
-
-![A physical Tether token wedged under a laptop](https://images.unsplash.com/photo-1626163015484-81fc7e3b90d8)
-
-*Photo by DrawKit Illustrations via Unsplash*
-
-**You will never hear me deny that crypto bulls** sometimes make cartoonishly triumphant claims and predictions. These are easy to spot (and mock) whenever bitcoin [doesn't zoom to $1 million per token](https://cointelegraph.com/news/former-coinbase-cto-makes-2m-bet-on-bitcoin-s-performance) within a 90-day timeframe, for example.
-
-That said, some bears' crypto doomsaying strikes me as equally outlandish at this point. But bears tend to get away with their whoppers more readily because, frankly, the mainstream press is more sympathetic to them.
-
-
-
+# Big headaches -- and market losses -- for tech
+## DeepSeek and a burgeoning global trade war wipe out trillions in wealth
 
 <!--
 
-Start with the gross overgeneralization that crypto is *all* a fraud, not a marketplace that sometimes has individual bad actors who are exceptions to the norm, as happens in stocks or real estate or any other asset.
+2 clients...
 
-Truly, wherever you find people and money, you will find people trying to screw other people out of money. Unfortunately, this is a feature of human beings, not something unique to crypto or any other investment.
+- only publicly traded ethereum validator. 9 yrs of dealing with shit on the sec. on-chain analysis.
 
-Overestimating the preventive power of agency regulation and underestimating the importance of market-based validation.
+- supply chain of critical minerals. secure strategic reserve of china. ira bill. trade wars. cobalt, lithium, copper. 4-star general. macro landscape.
 
-Some other string...
-
-- NYT prediction in '22: https://www.nytimes.com/2022/06/17/technology/tether-stablecoin-cryptocurrency.html
-
-- https://www.cnbc.com/2023/01/13/a-stablecoin-collapse-could-spill-into-us-bond-market-academic.html
-
-- https://crypto.news/tether-discloses-timeframe-for-suspending-usdt-redemptions-on-multiple-networks/
-
-- https://gizmodo.com/tether-terra-luna-bitcoin-fall-global-crypto-regulator-1848916607
-
-- https://gizmodo.com/tether-terra-luna-bitcoin-fall-global-crypto-regulator-1848916607
-
-- https://www.marketwatch.com/story/crypto-crash-what-investors-need-to-know-about-luna-tether-and-bitcoin-11652386874
-
-
-At some point, critics' assertions that crypto is all going to vanish have to be considered as delusional as anything the bulls make.
-
-Zeke Fawkes and Batman actors books dedicated long passages to predicting Tether's doom.
-
-Lehman Brothers and Bear Stearns.
+- stanford prof who's doing a healthcare ai company.
 
 -->
 
+![DeepSeek launch screen on a user's phone](https://images.unsplash.com/photo-1738107450310-8235c3d7d61b?q=80&w=3570&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+
+*Photo by Solen Feyissa on Unsplash*
+
+**People in America's tech industry** are usually proud to ["live in the future,"](https://about.fb.com/news/2023/12/metas-2023-progress-in-ai-and-mixed-reality/) meaning a relentless daily focus on emerging tools and trends. But some nasty surprises just jolted everyone back to present tense in the starkest way possible, wiping out trillions of dollars in market value along the way:
 
 
 
+<!-- Graf on weekly stock-market drop,
 
+###
+<!-- Transition to tariffs/crypto: https://www.coindesk.com/
 
-
-<!--
-
-My initial impression of the DeepSeek news is that it underscores two important points.
-
-1) It underscores open source.
-
-2) It underscores the reality of a hype cycle. Witness Anthropic CEO Dario Amodei's [dubious claim](https://gizmodo.com/anthropic-ceo-hilariously-claims-ai-will-double-human-lifespans-within-a-decade-2000554601) Thursday that AI will figure out how to double the average human lifespan within 10 years.
-
-3) It underscores the problem of oligarchy: It's less innovative.
+Most notable was the release of DeepSeek, a AI app from a Chinese startup that answers queries using far less processing power and electricity than popular U.S.-made AIs like ChatGPT.
 
 https://decrypt.co/303970/openai-o3-mini-early-launch-first-tests-deepseek
 
 https://decrypt.co/303904/italy-bans-china-deepseek-ai-privacy-fears
 
 
-- Will the AI bubble burst in 2025? https://www.forbes.com/sites/kolawolesamueladebayo/2025/01/20/experts-predict-the-bubble-may-burst-for-ai-in-2025/
 
 -->
-<!-- People's bid for TikTok: https://www.projectliberty.io/peoples-bid-for-tiktok/ | Sheila Warren hired as CEO
-
-- Cops misusing facial recognition https://www.washingtonpost.com/business/interactive/2025/police-artificial-intelligence-facial-recognition/
-
-- The late John McAfee's Twitter/X account is being used to promote a Solana-based crypto project. https://decrypt.co/302398/john-mcafees-twitter-promoting-solana-ai-token
-
--->
-
-### Week in Review: Jan. 26 to Feb. 2, 2025
-
-
 
 
 - Deepseek update TKTKTK A rough timeline of the DeepSeek news: https://sherwood.news/markets/quick-and-dirty-timeline-of-markets-deepseek-freak/ China's DeepSeek: https://www.cnbc.com/2025/01/24/how-chinas-new-ai-model-deepseek-is-threatening-us-dominance.html
 
-- Einhorn investor note lamenting bull cycle: https://www.cnbc.com/2025/01/21/david-einhorn-says-we-have-reached-the-fartcoin-stage-of-the-market-cycle.html
+- Weekly stock-market moves, NVDA, etc. <!-- Links tk -->
 
-
-- proposal to reduce Solana legislation: https://www.dlnews.com/articles/defi/solana-heavyweights-push-to-cut-inflation/
-
+- Will the AI bubble burst in 2025? https://www.forbes.com/sites/kolawolesamueladebayo/2025/01/20/experts-predict-the-bubble-may-burst-for-ai-in-2025/
 
 - **Crypto prices were held in check** by a mixed outlook for U.S. inflation and [interest rates](https://www.coindesk.com/markets/2025/01/28/fed-holds-rates-steady-takes-note-of-elevated-inflation). Perhaps most concerning, the Trump administration began [implementing tariffs](https://www.wsj.com/politics/elections/trump-says-tariffs-are-coming-on-computer-chips-steel-and-more-cef9974c?st=Q7Uc7p&reflink=desktopwebshare_permalink) against three of America's largest international trading partners, with additional industry-specific levies promised to come. An escalating trade war could put upward pressure on U.S. consumer prices in the months ahead as importers pass along the cost of tariffs. That in turn would effectively discourage interest-rate cuts friendly to traders of crypto, stocks, and other assets.
 
-- **As of Saturday afternoon in New York,** the global token market's valuation stood at $3.5 trillion, down more than 3% for the week. Bitcoin and ether each suffered similar 7-day declines in percentage terms. Meanwhile, Solana was a notable market laggard, off 13% for the week, according to [CoinMarketCap](https://coinmarketcap.com/).
+- **As of Saturday afternoon in New York,** the global token market's valuation stood at $3.5 trillion, down more than 3% for the week. Bitcoin and ether each suffered similar 7-day declines in percentage terms. Meanwhile, Solana was a notable market laggard, off 13% for the week, according to [CoinMarketCap](https://coinmarketcap.com/). <!-- Need updates -->
+
+### Week in Review: Jan. 26 to Feb. 2, 2025
+
+**Outside of the losses** in crypto's ruling token duopoly, there were rays of hope elsewhere:
 
 - Tether annual report: https://www.theblock.co/post/338275/tether-reports-13-billion-in-yearly-net-profits-for-2024 |  Stablecoin valuation tops 200B: https://www.coindesk.com/markets/2025/01/31/stablecoin-market-surges-past-usd200b-signaling-potential-crypto-price-upswing | https://decrypt.co/303882/tether-record-shattering-profits-bitcoin-us
+
+- proposal to reduce Solana legislation: https://www.dlnews.com/articles/defi/solana-heavyweights-push-to-cut-inflation/
 
 - MSTR preferred offering coming: https://www.coindesk.com/markets/2025/01/29/institutions-are-primed-for-microstrategy-s-preferred-stock-sale-data-suggests | https://www.theblock.co/post/338259/microstrategy-sees-strong-demand-for-preferred-stock-plan-raises-563-4-million-to-fuel-more-bitcoin-purchases
 
@@ -100,27 +61,15 @@ https://decrypt.co/303904/italy-bans-china-deepseek-ai-privacy-fears
 
 - Coinbase acquires web3 adtech platform Spindl https://www.theblock.co/post/338276/coinbase-acquires-web3-adtech-platform-spindl
 
-- New "undetectable" VPN from Nord: https://decrypt.co/303909/undetectable-vpn-nord-nordwhisper
-
-- Some redittors are banning X/Twitter links from their subreddits in response to Musk's post-inauguration Nazi salute. https://slate.com/technology/2025/01/reddit-bans-x-links-elon-musk-nazi-salute.html
-
 - British man jailed for brutal crypto robbery. https://decrypt.co/303832/british-men-jailed-brutal-crypto-theft
 
-- Google Maps is going to change the name of the body of water between Texas and Florida to the Gulf of America. https://www.cnbc.com/2025/01/27/google-maps-to-show-gulf-of-america-after-government-updates.html
-
-- Tesla AI talk annoys wall street: https://www.theverge.com/tesla/603393/tesla-car-company-elon-musk-ai-earnings
-
-### Community
-
-- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
+- New "undetectable" VPN from Nord: https://decrypt.co/303909/undetectable-vpn-nord-
 
 ### Odds & Ends
 
-- Astroid has requirements for life. https://www.salon.com/2025/01/30/building-blocks-of-life-discovered-on-asteroid-bennu/?in_brief=true
+- **Researchers from Japan's Kyushu University have discovered** the building blocks for organic matter, including carbon, nitrogen and ammonia, in rock samples from the asteroid Bennu. Their newly published study both gives insight and raises fresh questions about how life originates in the universe. ([Salon](https://www.salon.com/2025/01/30/building-blocks-of-life-discovered-on-asteroid-bennu/))
 
-- Underground hydrogen could be the next phase in an energy boom. https://www.technologyreview.com/2025/01/23/1110435/geologic-hydrogen/
-
-- **Copy editors' sense of humor hits different.** https://www.theverge.com/meta/603812/meta-warns-leakers-leaked-memo
+- **Copy editors' sense of humor hits different.** Shout out to whoever at the Verge gave us this zinger of a headline Thursday: ["Meta warns that it will fire leakers in leaked memo."](https://www.theverge.com/meta/603812/meta-warns-leakers-leaked-memo)
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
@@ -131,3 +80,27 @@ _**About me: I'm a New York-based consultant and writer with more than seven yea
  _**If you need to reach me directly for any reason, please email peter[at]w3w[dot]media.**_
 
  _**Best wishes for a healthy and productive week ahead.**_ 😊
+
+ <!--
+
+ Cutting room floor...
+
+ - Einhorn investor note lamenting bull cycle: https://www.cnbc.com/2025/01/21/david-einhorn-says-we-have-reached-the-fartcoin-stage-of-the-market-cycle.html
+
+ - Some redittors are banning X/Twitter links from their subreddits in response to Musk's post-inauguration Nazi salute. https://slate.com/technology/2025/01/reddit-bans-x-links-elon-musk-nazi-salute.html
+
+ - Google Maps is going to change the name of the body of water between Texas and Florida to the Gulf of America. https://www.cnbc.com/2025/01/27/google-maps-to-show-gulf-of-america-after-government-updates.html
+
+ - Tesla AI talk annoys wall street: https://www.theverge.com/tesla/603393/tesla-car-company-elon-musk-ai-earnings
+
+ ### Community
+
+ - https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
+
+ <!-- People's bid for TikTok: https://www.projectliberty.io/peoples-bid-for-tiktok/ | Sheila Warren hired as CEO
+
+ - Cops misusing facial recognition https://www.washingtonpost.com/business/interactive/2025/police-artificial-intelligence-facial-recognition/
+
+ - The late John McAfee's Twitter/X account is being used to promote a Solana-based crypto project. https://decrypt.co/302398/john-mcafees-twitter-promoting-solana-ai-token
+
+ -->
