Updating draft 9 Feb

--- a/2025/2025-02-09.md
+++ b/2025/2025-02-09.md
@@ -1,25 +1,73 @@
 # tktk
 ## tktk
 
-![A physical Tether token wedged under a laptop](https://images.unsplash.com/photo-1626163015484-81fc7e3b90d8)
+![Broken dishes](https://w3w.news/img/chuttersnap-5000.jpg)
 
-*Photo by DrawKit Illustrations via Unsplash*
+*Photo by CHUTTERSNAP via Unsplash*
 
-<!-- 100-word lead item -->
+**Donald Trump's second presidential term** has presented more of an immediate problem for this newsletter than I anticipated, in several respects. <!-- Needs work -->
+
+The first is that I never envisioned w3w as a political publication. I talk tech here, especially the emerging stuff that gets us out of what I've long viewed as a hellish, distorted vision of the internet dominated by just a handful of U.S. giants.
+
+<!-- Vision of using blockchain to make -->
+
+On the other hand, those giants have inserted themselves at the heart of the new administration. So the topic of politics is becoming increasingly unavoidable.
+
+<!--
+
+100-word lead item...
+
+CENSORSHIP: Where are all the concerns about censorship from crypto world now? | BREAKIT: tktktk
+
+- Censorship: TKTK  
+
+- Data breach at Treasury
+
+-->
 
 ### Week in Review: Feb. 2-8, 2025
 
-- tk
-- tk
-- tk
+- Altman laments company's approach to open source. <!-- Mock this shit mercilessly. --> https://techcrunch.com/2025/01/31/sam-altman-believes-openai-has-been-on-the-wrong-side-of-history-concerning-open-source/
 
-### Community
+- Markets: TK
+
+- Earnings: MicroStrategy talks bitcoin plans for '25 on its call: https://sherwood.news/crypto/micro-strategy-has-even-more-aggressive-bitcoin-plans-for-2025/ | Google TK
+
+- Launch of XEF fund that tracks both BTC and ETH. <!-- Need link -->
+
+- El Salvador amends bitcoin law, removes legal tender status after new IMF deal. https://www.electronicpaymentsinternational.com/news/el-salvador-amends-bitcoin-law-imf/
+
+- Google drops pledge not to use AI for weapons or surveillance: https://www.washingtonpost.com/technology/2025/02/04/google-ai-policies-weapons-harm/
+
+- Crypto regulation update. Meetings of conference chairs this week. Crypto czar Sachs meeting with both houses' banking committee chairs on Tuesday... <!-- Link tk -->
+
+- Trivago acquisition gives them new on-chain capabilities ([CoinDesk](https://www.coindesk.com/business/2025/02/04/trivago-adds-travala-s-hotel-inventory-gaining-crypto-payment-options))
+
+<!--
+
+String...
+
+- Robinhood's CEO wants to use blockchain technology to help small investors trade in shares of privately held companies. https://www.washingtonpost.com/opinions/2025/01/28/investing-crypto-tech-robinhood-stock-market/
+
+- Best way to fight disinfo: https://www.washingtonpost.com/opinions/2025/02/03/meta-fact-checking-disinformation-facebook-lee-mcintyre/
+
+- https://www.salon.com/2025/02/01/how-economics-wrecked-the-world--and-how-we-can-escape-from-ricardos-dream/
 
 - https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
 
+-->
+
+### Community
+
+- Shout out NMSC group. <!-- Link TK -->
+
+- ["The Substack invasion"](https://www.salon.com/2025/02/02/the-substack-invasion-when-the-tech-bros-came-for-journalism-everything-changed/) of journalism | <!-- Maybe add in Star-Ledger news re: closing of Newark's print edition is a good time to talk journalism innovation. -->
+
 ### Odds & Ends
 
-- tk
+- TKTK ([New York Times](https://www.nytimes.com/2025/02/01/magazine/anna-lembke-interview.html))
+
+- **Police are investigating the** theft of a 100,000 eggs from a tractor-trailer in Pennsylvania. On the black market, they could fetch $40,000 thanks to a burgeoning egg shortage due to a bird flu outbreak in the U.S. ([Associated Press](https://apnews.com/article/eggs-stolen-pennsylvania-100000-c1c260ca05b9f84612c61071cb504939))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
