Updating 9 Feb draft

--- a/2025/2025-02-09.md
+++ b/2025/2025-02-09.md
@@ -1,73 +1,56 @@
-# tktk
-## tktk
+# America's states are racing Washington to adopt crypto.
+## In capitols from Phoenix to Harrisburg, lawmakers are exploring creation of digital reserves.
 
-![Broken dishes](https://w3w.news/img/chuttersnap-5000.jpg)
+![An old map of the U.S. East Coast](https://w3w.news/img/alex-boyd-1920.jpg)
+*Photo by Alex Boyd via Unsplash*
 
-*Photo by CHUTTERSNAP via Unsplash*
+**Twenty-one American states** have now either adopted or formally considered various forms of public investment in crypto, according to [Bitcoin Reserve Monitor](https://bitcoinreservemonitor.com/), a new site tracking such proposals.
 
-**Donald Trump's second presidential term** has presented more of an immediate problem for this newsletter than I anticipated, in several respects. <!-- Needs work -->
+In particular, a race is heating up to see who will become the first to create a strategic crypto reserve. North Dakota has already [rejected the idea](https://bitcoinreservemonitor.com/usa/north-dakota). But such proposals are still pending in more than a dozen other state legislatures, with Maryland and Kentucky [joining the fray](https://decrypt.co/305098/kentucky-maryland-latest-states-bitcoin-reserve) last week.
 
-The first is that I never envisioned w3w as a political publication. I talk tech here, especially the emerging stuff that gets us out of what I've long viewed as a hellish, distorted vision of the internet dominated by just a handful of U.S. giants.
+**Why it matters:** Strategic crypto reserves could help states manage pension obligations and other financial challenges. Meanwhile, any buying by such deep-pocketed entities to build new reserves from scratch could bolster the broader token market, creating a boon for private-sector investors.
 
-<!-- Vision of using blockchain to make -->
+The state-level bills in the U.S. have garnered less press fanfare than possibile creation of a [federal strategic bitcoin reserve](https://www.lummis.senate.gov/press-releases/lummis-introduces-strategic-bitcoin-reserve-legislation/) -- an idea floated by Republicans in Washington. But they could ultimately prove more fruitful.
 
-On the other hand, those giants have inserted themselves at the heart of the new administration. So the topic of politics is becoming increasingly unavoidable.
+Three factors that may make the states more apt than Washington to adopt crypto in 2025:
 
-<!--
+- **Constitutional/Political Dynamics:** The U.S. Constitution clearly stipulates that Congress is [responsible for all spending](https://constitutioncenter.org/the-constitution/articles/article-i/clauses/756). That should inevitably affect the federal government's ability to build and maintain a strategic crypto reserve, regardless of President Trump's stated support for the industry. If even a few members of Congress disagree, especially in the fractious House of Representatives, a national crypto reserve could quickly die on the vine.
 
-100-word lead item...
+- **Monetary Policy:** Washington already holds (and frequently uses) the power to print more of its own dollars to cover its expenses. The states can't do this. Hence they have greater economic incentives to get creative and, perhaps, adopt alternative stores of value like crypto.
 
-CENSORSHIP: Where are all the concerns about censorship from crypto world now? | BREAKIT: tktktk
+- **Fiscal Requirements:** States have to balance their budgets; Washington famously doesn't. Hence any windfall from a gain like bitcoin's 122% price jump in 2024, for example, would be felt more tangibly at the state level than it would in Washington. So would any steep losses in the future, of course. But for now, as long as crypto remains in a bull market -- and continues to beat traditional investment yardsticks like the S&P 500 in particular -- the sector should continue to pique the states' curiosity.
 
-- Censorship: TKTK  
+**Political junkies might also take note** of the bipartisanship of the states' recent crypto push. A quick cross-referencing of [Bitcoin Reserve Monitor](https://bitcoinreservemonitor.com/) and the election data site [270toWin](https://www.270towin.com/) shows that 14 states that have considered investment in digital assets so far are "red states" that were forecast to go for Trump ahead of November's presidential election. But five were Harris-leaning "blue states," and two (Pennsylvania and Arizona) were considered presidential swing states.
 
-- Data breach at Treasury
+Also intriguing: The crypto-curious cohort includes Iowa and New Hampshire -- two states famous for their early presidential primaries.
 
--->
+Is it too early to start speculating about the '28 race?
 
 ### Week in Review: Feb. 2-8, 2025
 
-- Altman laments company's approach to open source. <!-- Mock this shit mercilessly. --> https://techcrunch.com/2025/01/31/sam-altman-believes-openai-has-been-on-the-wrong-side-of-history-concerning-open-source/
+- laments company's approach to open source. <!-- Mock this shit mercilessly. --> https://techcrunch.com/2025/01/31/sam-altman-believes-openai-has-been-on-the-wrong-side-of-history-concerning-open-source/
 
-- Markets: TK
+- **A head-scratching remark from OpenAI CEO Sam Altman:** In a recent [AMA session](https://www.reddit.com/r/OpenAI/comments/1ieonxv/ama_with_openais_sam_altman_mark_chen_kevin_weil/?rdt=56101) with Reddit users, Altman acknowledged that the recent launch of rival DeepSeek highlights how his company has been ["on the wrong side of history"]() when it comes to open sourcing its technologies.
 
-- Earnings: MicroStrategy talks bitcoin plans for '25 on its call: https://sherwood.news/crypto/micro-strategy-has-even-more-aggressive-bitcoin-plans-for-2025/ | Google TK
+- **Kinda makes you wonder why OpenAI** put "open" in its name to begin with, no? It's almost as if "open" was always a misnomer for a company that in fact is focused on building proprietary stuff -- the opposite of open source -- in a naked attempt to monopolize AI as a product much as search and social were monopolized in earlier eras.
 
-- Launch of XEF fund that tracks both BTC and ETH. <!-- Need link -->
-
-- El Salvador amends bitcoin law, removes legal tender status after new IMF deal. https://www.electronicpaymentsinternational.com/news/el-salvador-amends-bitcoin-law-imf/
 
 - Google drops pledge not to use AI for weapons or surveillance: https://www.washingtonpost.com/technology/2025/02/04/google-ai-policies-weapons-harm/
 
-- Crypto regulation update. Meetings of conference chairs this week. Crypto czar Sachs meeting with both houses' banking committee chairs on Tuesday... <!-- Link tk -->
+- Earnings: MicroStrategy talks bitcoin plans for '25 on its call: https://sherwood.news/crypto/micro-strategy-has-even-more-aggressive-bitcoin-plans-for-2025/ | Google TK
+
+- El Salvador amends bitcoin law, removes legal tender status after new IMF deal. https://www.electronicpaymentsinternational.com/news/el-salvador-amends-bitcoin-law-imf/
+
+- Launch of XEF fund that tracks both BTC and ETH. <!-- Need link -->
 
 - Trivago acquisition gives them new on-chain capabilities ([CoinDesk](https://www.coindesk.com/business/2025/02/04/trivago-adds-travala-s-hotel-inventory-gaining-crypto-payment-options))
 
-<!--
-
-String...
-
-- Robinhood's CEO wants to use blockchain technology to help small investors trade in shares of privately held companies. https://www.washingtonpost.com/opinions/2025/01/28/investing-crypto-tech-robinhood-stock-market/
-
-- Best way to fight disinfo: https://www.washingtonpost.com/opinions/2025/02/03/meta-fact-checking-disinformation-facebook-lee-mcintyre/
-
-- https://www.salon.com/2025/02/01/how-economics-wrecked-the-world--and-how-we-can-escape-from-ricardos-dream/
-
-- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
-
--->
-
-### Community
-
-- Shout out NMSC group. <!-- Link TK -->
-
-- ["The Substack invasion"](https://www.salon.com/2025/02/02/the-substack-invasion-when-the-tech-bros-came-for-journalism-everything-changed/) of journalism | <!-- Maybe add in Star-Ledger news re: closing of Newark's print edition is a good time to talk journalism innovation. -->
-
 ### Odds & Ends
 
-- TKTK ([New York Times](https://www.nytimes.com/2025/02/01/magazine/anna-lembke-interview.html))
+- **Police are investigating the theft of a 100,000 eggs** from a tractor-trailer in Pennsylvania. On the black market, they could fetch $40,000 thanks to a burgeoning egg shortage propeled by a bird flu outbreak in the U.S. ([Associated Press](https://apnews.com/article/eggs-stolen-pennsylvania-100000-c1c260ca05b9f84612c61071cb504939))
 
-- **Police are investigating the** theft of a 100,000 eggs from a tractor-trailer in Pennsylvania. On the black market, they could fetch $40,000 thanks to a burgeoning egg shortage due to a bird flu outbreak in the U.S. ([Associated Press](https://apnews.com/article/eggs-stolen-pennsylvania-100000-c1c260ca05b9f84612c61071cb504939))
+- **The chances of an asteroid hitting Earth** in 2032 just went up slightly. But don't worry. They're still "only" a little more than 2%. ([Salon](https://www.salon.com/2025/02/08/the-odds-of-an-asteroid-hitting-earth-in-2032-just-went-slightly-up/))
+
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
