--- a/2025/2025-02-09.md
+++ b/2025/2025-02-09.md
@@ -28,20 +28,15 @@ Is it too early to start speculating about the '28 race?
 
 ### Week in Review: Feb. 2-8, 2025
 
-- laments company's approach to open source. <!-- Mock this shit mercilessly. --> https://techcrunch.com/2025/01/31/sam-altman-believes-openai-has-been-on-the-wrong-side-of-history-concerning-open-source/
+- **Elon Musk's efforts** to figuratively [bulldoze](https://www.nytimes.com/2025/02/03/us/politics/musk-federal-government.html) multiple federal agencies, [gain access](https://apnews.com/article/donald-trump-elon-musk-doge-treasury-5e26cc80fcb766981cea56afd57ae759) to troves of Americans' personal information, and re-hire [an openly racist data geek](https://www.bbc.com/news/articles/c93q625y04wo) who resigned during what appears to have been a fleeting bout of common sense dominated political coverage in America last week. These antics also invited formal challenges in [Congress and]() the [courts](). Yet Musk still had only the second-highest disapproval rating (49%) out of 18 public figures assessed in a new [Economist/YouGov poll](https://d3nkl3psvxxpe9.cloudfront.net/documents/econtoplines_c1AfT3R.pdf). Meta CEO Mark Zuckerberg fared even worse at 56% disapproval among poll respondents. 
+
+- **Google updated its ethics guidelines for AI** to remove commitments not to apply such tech to weapons or surveillance. ([Washington Post](https://news.google.com/read/CBMijgFBVV95cUxPTTJsT0kza2tOM3lsb1paaGJzdkdpbGRXdFhlLThfZzFjcTNPaFVsNGRONXYtbi1yekp0VzlCckVUZHAwcTVDUEllTFM5d0Q3VGxwX3pfVGpRczFMVVRJa3ZUS2RKbUIxbWE5UWtuOXZFUjI5cVBEOUVRc0pXaDJxUF9HRGpnc3ZEMUNuN0VR?hl=en-US&gl=US&ceid=US%3Aen))
 
 - **A head-scratching remark from OpenAI CEO Sam Altman:** In a recent [AMA session](https://www.reddit.com/r/OpenAI/comments/1ieonxv/ama_with_openais_sam_altman_mark_chen_kevin_weil/?rdt=56101) with Reddit users, Altman acknowledged that the recent launch of rival DeepSeek highlights how his company has been ["on the wrong side of history"]() when it comes to open sourcing its technologies.
 
 - **Kinda makes you wonder why OpenAI** put "open" in its name to begin with, no? It's almost as if "open" was always a misnomer for a company that in fact is focused on building proprietary stuff -- the opposite of open source -- in a naked attempt to monopolize AI as a product much as search and social were monopolized in earlier eras.
 
-
-- Google drops pledge not to use AI for weapons or surveillance: https://www.washingtonpost.com/technology/2025/02/04/google-ai-policies-weapons-harm/
-
-- Earnings: MicroStrategy talks bitcoin plans for '25 on its call: https://sherwood.news/crypto/micro-strategy-has-even-more-aggressive-bitcoin-plans-for-2025/ | Google TK
-
 - El Salvador amends bitcoin law, removes legal tender status after new IMF deal. https://www.electronicpaymentsinternational.com/news/el-salvador-amends-bitcoin-law-imf/
-
-- Launch of XEF fund that tracks both BTC and ETH. <!-- Need link -->
 
 - Trivago acquisition gives them new on-chain capabilities ([CoinDesk](https://www.coindesk.com/business/2025/02/04/trivago-adds-travala-s-hotel-inventory-gaining-crypto-payment-options))
 
